# struos-normative-engine

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  SECURITY.md  pyproject.toml  railway.json  vercel.json
.github/workflows/: ci.yml
api/: .env.example  _security.py  index.py  main.py  requirements.txt  vercel.json
data/: glossary_links.json  nsr10_glossary.json  synonyms_nsr10.py
demo/: index.html
docs/: COMANDOCALC_ROADMAP.md  KNOWLEDGE_GRAPH_SCHEMA.md  MEJORAS_EMBEDDINGS_ANALISIS.md  chatgpt-action.md  comandocalc-gpt-action.json  index.html  openapi-chatgpt.json
docs/referencias/: INDICE_REFERENCIAS.md  SIMBOLOGIA_SOLDADURA_AWS_A2.4.md
extracted/: definitions_a13.json  external_refs_complete.json  normas_all_chapters.json  normas_tecnicas.json  symbols_all_chapters.json  titulo_a_index.json
extracted/titulo_a/: complete_extraction.json  page_001.json  page_002.json  page_003.json  (+183 more)
kg/: edges_titulo_b.json  edges_titulo_c.json  edges_titulo_d.json  edges_titulo_e.json  nodes_titulo_b.json  nodes_titulo_c.json  nodes_titulo_d.json  nodes_titulo_e.json
mcp/: README.md  claude_desktop_config.json  pyproject.toml  server.py
mcp_server/: README.md  install.sh  server.py
scripts/: advanced_search.py  connect_formulas_symbols.py  create_advanced_edges.py  crop_figures.py  embedding_cache.py  enrich_kg_v2.py  extract_all_chapters.py  extract_all_external_refs.py  extract_definitions.py  extract_figures.py  extract_figures_precise.py  extract_full_references.py  extract_kg_titulo_b.py  extract_kg_titulo_c.py  extract_missing_tables.py  extractor.py  fix_empty_tables.py  kg_builder.py  link_glossary.py  link_tables_sql.py  load_definitions_kg.py  load_external_refs_kg.py  load_symbols_kg.py  nsr10_engine.py  nsr10_query.py  nsr10_rag.py  regenerate_formulas.py  regenerate_remaining.py  search_production.py  search_v3.py  search_v5.py  test_extraction.py  test_extraction_v2.py  verify_index.py
sql/: 01_schema.sql  02_data_nsr10.sql  03_kg_schema.sql  04_norm_metadata.sql  04_table_data.sql
src/: normative_package.py  nsr10_formulas.py
tests/: test_api_security.py  test_kg_integrity.py  test_nsr10_complete.py
vercel-api/: requirements.txt
(+17 files in other folders)
