[project]
name = "nsr10-mcp"
version = "2.0.0"
description = "MCP Server (FastMCP) para consultas NSR-10 Colombia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
nsr10-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
